# OSLab

./: CMakeLists.txt  ForkCreator.c  ProcessCreator.c  README.md  filetools.c  input.txt  shm.c  temp.c
exp3/: POSIX-Consumer.c  POSIX-Producer.c  Process1.c  Process2.c  SystemV-1.c  SystemV-2.c
exp4/: Thread1.c  Thread2.c
exp6/: RW_Problem.c  complicated_producer_consumer.c  input.txt
exp7/: BankerAlgorithm.c  input.txt  tec_bank_algorithm.c
